// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Actions/Link Button Filled 1`] = `
<LinkButton
  href="/filledButtonLink"
  styleType="is-primary"
>
  <LocalizedLink
    className="button is-primary"
    href="/filledButtonLink"
  >
    <Link
      href="/filledButtonLink"
    >
      <a
        className="button is-primary"
        href="/filledButtonLink"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Filled LinkButton
      </a>
    </Link>
  </LocalizedLink>
</LinkButton>
`;

exports[`Storyshots Actions/Link Button Regular Case 1`] = `
<LinkButton
  href="/regularButtonLink"
  normalCase={true}
>
  <LocalizedLink
    className="button is-normal-case"
    href="/regularButtonLink"
  >
    <Link
      href="/regularButtonLink"
    >
      <a
        className="button is-normal-case"
        href="/regularButtonLink"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        LinkButton (Normal Case)
      </a>
    </Link>
  </LocalizedLink>
</LinkButton>
`;

exports[`Storyshots Actions/Link Button Small 1`] = `
<LinkButton
  href="/smallButtonLink"
  size="is-small"
>
  <LocalizedLink
    className="button is-small"
    href="/smallButtonLink"
  >
    <Link
      href="/smallButtonLink"
    >
      <a
        className="button is-small"
        href="/smallButtonLink"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Small LinkButton
      </a>
    </Link>
  </LocalizedLink>
</LinkButton>
`;

exports[`Storyshots Actions/Link Button Small And Filled 1`] = `
<LinkButton
  href="/smallFilledButtonLink"
  size="is-small"
  styleType="is-primary"
>
  <LocalizedLink
    className="button is-primary is-small"
    href="/smallFilledButtonLink"
  >
    <Link
      href="/smallFilledButtonLink"
    >
      <a
        className="button is-primary is-small"
        href="/smallFilledButtonLink"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Small and Filled LinkButton
      </a>
    </Link>
  </LocalizedLink>
</LinkButton>
`;

exports[`Storyshots Actions/Link Button Standard 1`] = `
<LinkButton
  href="/standardButtonLink"
>
  <LocalizedLink
    className="button"
    href="/standardButtonLink"
  >
    <Link
      href="/standardButtonLink"
    >
      <a
        className="button"
        href="/standardButtonLink"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        LinkButton w/Link
      </a>
    </Link>
  </LocalizedLink>
</LinkButton>
`;
